--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Codystar:300&display=swap');
+
 .flex-container {
     display: flex;
     flex-direction: row;
@@ -42,3 +44,49 @@
     max-height: 400px;
     object-fit: cover;
   }
+
+  .google-maps-icon {
+    width: 20px;
+    height: 20px;
+    vertical-align: middle; /* Aligns the icon with the text */
+    margin-left: 5px; /* Adds spacing between the text and icon */
+  }
+  header {
+    background-image: url('https://lh3.googleusercontent.com/pw/AP1GczPGz3zXtqCRNxfFTwQYYKWa5fVk0kneZaYpeF5BR4lcdlwPb6Y-7dNfaYEMWo9j3p0m_MGo0uQB7eeX3WhJTSLtua3HWN4DSptMpX4EGGID2u58yqUvgKRpnCMlGPqRGmNRk_kZberV4uVkNc_Ogidevg=w2812-h1582-s-no-gm?authuser=0');
+    background-size: cover;
+    background-position: center;
+    height: max-content; /* Adjust the height as needed */
+    text-align: center;
+    color: white; /* Text color */
+    line-height: 300px; /* Vertically centers text */
+}  
+
+.neons {
+  text-align: center;
+}
+
+.neons h1 {
+ margin-left: 5rem;
+ font-size: 5rem;
+ text-align: left;
+  font-weight: bold;
+ -webkit-animation: glow 2s ease-in-out infinite alternate;
+ -moz-animation: glow 2s ease-in-out infinite alternate;
+ animation: glow 2s ease-in-out infinite alternate;
+}
+
+.neons p {
+  font-size: 5rem;
+}
+
+@-webkit-keyframes glow {
+    from {
+     color: #fff;
+   text-shadow: 0 0 10px #00fff2, 0 0 20px #00fff2, 0 0 30px #00fff2, 0 0 40px #00fff2, 0 0 50px #00fff2, 0 0 60px #00fff2, 0 0 70px #00fff2, 0 0 90px #00fff2;
+ }
+ 
+ to {
+    color: gray;
+   text-shadow: 0 0 20px #00fff2, 0 0 30px #00fff2, 0 0 40px #00fff2, 0 0 50px #00fff2, 0 0 60px #00fff2, 0 0 70px #00fff2, 0 0 80px #00fff2, 0 1 90px #00fff2;
+ }
+}
