--- a/styles.css
+++ b/styles.css
@@ -54,13 +54,30 @@
   header {
     background-image: url('https://lh3.googleusercontent.com/pw/AP1GczPGz3zXtqCRNxfFTwQYYKWa5fVk0kneZaYpeF5BR4lcdlwPb6Y-7dNfaYEMWo9j3p0m_MGo0uQB7eeX3WhJTSLtua3HWN4DSptMpX4EGGID2u58yqUvgKRpnCMlGPqRGmNRk_kZberV4uVkNc_Ogidevg=w2812-h1582-s-no-gm?authuser=0');
     background-size: cover;
-    background-position: center;
+    background-position: -50%;
     height: max-content; /* Adjust the height as needed */
     text-align: center;
     color: white; /* Text color */
     line-height: 300px; /* Vertically centers text */
 }  
 
+/* Add optional overlay effect */
+/* header::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Black overlay with transparency */
+  z-index: 1; /* Ensures the overlay is above the background but below the text */
+} */
+
+header h1 {
+  font-size: 2.5em;
+  z-index: 2; /* Ensures the text is above the overlay */
+  margin: 0;
+}
 .neons {
   text-align: center;
 }
