--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
   .left-content {
     flex: 1; /* Makes the left div take up equal space */
     max-width: 50%; /* Optional to limit size */
+    align-content: center;
   }
   .left-content img {
     width: 100%; /* Ensures the image scales properly */
@@ -30,14 +31,15 @@
     gap: 20px;
   }
   
-  .left-content {
+  .left-content-picture {
     flex: 1;
     padding: 20px;
   }
   
-  .right-content {
+  .right-content-pictures {
     flex: 1;
     max-width: 50%;
+    align-content: center;
   }
   
   .carousel-inner img {
@@ -60,18 +62,6 @@
     color: white; /* Text color */
     line-height: 300px; /* Vertically centers text */
 }  
-
-/* Add optional overlay effect */
-/* header::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Black overlay with transparency */
-  z-index: 1; /* Ensures the overlay is above the background but below the text */
-} */
 
 header h1 {
   font-size: 2.5em;
@@ -106,4 +96,8 @@ header h1 {
     color: gray;
    text-shadow: 0 0 20px #00fff2, 0 0 30px #00fff2, 0 0 40px #00fff2, 0 0 50px #00fff2, 0 0 60px #00fff2, 0 0 70px #00fff2, 0 0 80px #00fff2, 0 1 90px #00fff2;
  }
+}
+
+.address{
+  text-align: right;
 }
