--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Codystar:wght@300;400&family=Gloria+Hallelujah&display=swap');
 
 body {
-  background-color: #f4fbf4;
+  background-color: white;
   /* Very light pastel green */
   color: #2f4f4f;
   /* Dark gray-green for text */
