--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ body {
 header {
   background-image: url('https://lh3.googleusercontent.com/pw/AP1GczPGz3zXtqCRNxfFTwQYYKWa5fVk0kneZaYpeF5BR4lcdlwPb6Y-7dNfaYEMWo9j3p0m_MGo0uQB7eeX3WhJTSLtua3HWN4DSptMpX4EGGID2u58yqUvgKRpnCMlGPqRGmNRk_kZberV4uVkNc_Ogidevg=w2812-h1582-s-no-gm?authuser=0');
   background-size: cover;
-  background-position: -55%;
+  background-position: 70%;
   height: max-content;
   /* Adjust the height as needed */
   text-align: center;
@@ -110,6 +110,7 @@ header h1 {
   font-size: 5rem;
   text-align: left;
   font-weight: bold;
+  -webkit-text-stroke: 1px #B22222; /* Red border */
   -webkit-animation: glow 2s ease-in-out infinite alternate;
   -moz-animation: glow 2s ease-in-out infinite alternate;
   animation: glow 2s ease-in-out infinite alternate;
@@ -117,16 +118,17 @@ header h1 {
 
 .neons p {
   font-size: 5rem;
+  line-height: 2;
 }
 
 @-webkit-keyframes glow {
   from {
-    color: #FF0000;
+    color: #B22222;
     text-shadow: 0 0 10px #FFD700, 0 0 20px #FFD700, 0 0 30px #FFD700, 0 0 40px #FFD700, 0 0 50px #FFD700, 0 0 60px #FFD700, 0 0 70px #FFD700, 0 0 90px #FFD700;
   }
 
   to {
-    color: #FF0000;
+    color: #B22222;
     text-shadow: 0 0 20px #FFD700, 0 0 30px #FFD700, 0 0 40px #FFD700, 0 0 50px #FFD700, 0 0 60px #FFD700, 0 0 70px #FFD700, 0 0 80px #FFD700, 0 1 90px #FFD700;
   }
 }
@@ -306,6 +308,7 @@ dialog .buttons {
   height: 60px; /* Match the height of one item */
   overflow: hidden;
   position: relative;
+  border-radius: 15px;
 }
 
 #flip > div > div {
