--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ header h1 {
   font-size: 5rem;
   text-align: left;
   font-weight: bold;
-  -webkit-text-stroke: 1px #B22222; /* Red border */
+  -webkit-text-stroke: 1px #fff; /* Red border */
   -webkit-animation: glow 2s ease-in-out infinite alternate;
   -moz-animation: glow 2s ease-in-out infinite alternate;
   animation: glow 2s ease-in-out infinite alternate;
